--- a/webui/src/App.scss
+++ b/webui/src/App.scss
@@ -102,6 +102,66 @@ h4, h5 {
   padding-top: 3em;
 }
 
+.sort-filter-box {
+  color: $primary;
+  width: 130px;
+  height: 60px;
+  float: right;
+  margin-right: 20px;
+  border: 1px solid $gray-5;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: #000000;
+  margin-top: 15px;
+}
+
+.icon-button {
+  height: 100%;
+  width: 50%;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.icon-button:hover {
+  background-color: $gray-5;
+  border-radius: 10px;
+}
+
+.table-selection-box{
+  color: $primary;
+  width: 350px;
+  height: 60px;
+  float: left;
+  margin-left: 20px;
+  border: 1px solid $gray-5;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: #000000;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.table-button {
+  background-color: transparent;
+  color: white;
+  font-size: 1.2em;
+  border: 1px solid $gray-5;
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.table-button:hover {
+  background-color: $primary;
+  border-radius: 10px;
+  color: white
+}
+
 table {
   color: white;
   border-collapse: collapse;
