--- a/webui/src/App.scss
+++ b/webui/src/App.scss
@@ -115,14 +115,22 @@ h4, h5 {
   margin-top: 15px;
 }
 
-.icon-button {
-  height: 100%;
-  width: 50%;
-  padding: 5px;
-  cursor: pointer;
+.dropdown-toggle.no-caret::after {
+  display: none;
 }
 
-.icon-button:hover {
+.dropdown-button {
+  display: inline-flex;
+  height: 100%;
+  width: 50%;
+  cursor: pointer;
+  color: $primary;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.dropdown-button:hover {
   background-color: $gray-5;
   border-radius: 10px;
 }
