--- a/webui/src/App.scss
+++ b/webui/src/App.scss
@@ -170,6 +170,32 @@ h4, h5 {
   color: white
 }
 
+.table-wrapper {
+  width: 100%;
+  padding-bottom: 10px;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+  scrollbar-gutter: stable;
+  scrollbar-width: 10px;
+  scrollbar-color: #{$gray-5} transparent;
+}
+
+.table-wrapper::-webkit-scrollbar {
+  height: 10px;
+}
+
+.table-wrapper::-webkit-scrollbar-thumb {
+  background-color: $gray-5;
+  border-radius: 8px;
+  border: 2px solid transparent; /* gives some padding around the thumb */
+}
+
+.table-wrapper table {
+  width: max-content;
+  min-width: 100%;
+  border-collapse: collapse;
+}
+
 table {
   color: white;
   border-collapse: collapse;
